Improved playback performance, add a slider to control walterfall